// @skip-codegen-identical-test

syntax = "proto2";

import "rustproto.proto";
option (rustproto.generate_accessors_all) = true;

package test_any;

message MessageOne {
    optional int32 i = 1;
}

message MessageTwo {

}
